icons and z-index fix

--- a/PlayTimeClient/src/styles.scss
+++ b/PlayTimeClient/src/styles.scss
@@ -26,6 +26,15 @@ body {
     margin: 0;
     background-color: $background-color;
     color: $secondary-text-color;
+    overflow: hidden;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
